style: put footer out of the viewport to fix CLS

--- a/app/globals.css
+++ b/app/globals.css
@@ -22,16 +22,14 @@ html {
 body {
   margin: 0;
   padding: 0;
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh; /* Use vh (viewport height) units to ensure full height */
 }
 
 main {
-  flex: 1;
   width: 80%;
   margin-left: auto;
   margin-right: auto;
+  /* AppBar size is 88px */
+  min-height: calc(100vh - 88px);
 }
 
 @media screen and (max-width: 992px) {
